Bug 44998 - Draw and Impress crash when opening context menu of a field
Summary: Draw and Impress crash when opening context menu of a field
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.5.0 RC2
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-20 09:47 UTC by Milos Sramek
Modified: 2014-10-07 16:09 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with symbols on master (4.36 KB, text/plain)
2012-02-03 14:24 UTC, Julien Nabet
Details
traceback for bug 44998 (11.60 KB, text/plain)
2012-12-30 11:12 UTC, Milos Sramek
Details
backtace for 4.2 beta2 (30.22 KB, text/x-log)
2013-12-09 10:09 UTC, Milos Sramek
Details
bt with master sources (5.28 KB, text/plain)
2013-12-12 20:48 UTC, Julien Nabet
Details
valgrind log for reference (7.11 KB, text/plain)
2014-10-07 15:35 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Milos Sramek 2012-01-20 09:47:34 UTC
Draw and Impress crash when opening context menu of a field. Applies to Date, Time and perhaps other fields in Draw and Impress

To repeat:
1. open Draw/Impress
2. Insert date by: Insert/Fields/Date(fixed). A box with date appears - it is selected
3. Open its context menu by right clicking. Note that the menu does not highlight items under the cursor
4. Click on an item - nothing happens. Click on it once more - LO crashes.


If the field context menu opened on the first click, LO crashed always. If however, other context menu opens (for example text context menu), this works normally (items are highlighted). However, the field context menu then sometimes works normally, sometimes crashes.

Crashes are always connected with not highlighting the items of the menu. 

Normally, a context menu vanishes, if one (left)clicks somewhere else. This faulty context menu vanishes only on the second click elsewhere;
Milos
Comment 1 Valerio Capello 2012-01-27 04:02:35 UTC
Confirmed on:
LibreOffice 3.4.5 OOO340m1 (Build:502)

Confirmed on:
LibreOffice 3.5.0rc2 
Numero di build: e371a95-bf68a13-5a1aa2b-d3c1ae9-b938258
Comment 2 Julien Nabet 2012-02-03 14:24:05 UTC
Created attachment 56584 [details]
bt with symbols on master

I reproduced the problem on master (pc Debian x86-64).
I attached the bt with symbols.
Comment 3 Milos Sramek 2012-05-29 09:04:16 UTC
Still reproduced on version 3.6.0alpha0+ Build ID: eb0a1da
Comment 4 Julien Nabet 2012-05-30 13:56:58 UTC
On pc Debian x86-64 with master updated today or with 3.5 branch updated yesterday + new LO profile for each test. I didn't reproduce this problem.

Milos: could you attach a backtrace ? (see http://wiki.documentfoundation.org/BugReport#How_to_get_backtrace_.28on_Linux.29)
Comment 5 Julien Nabet 2012-12-29 08:38:25 UTC
No feedback since 6 months and last test was ok. I put WFM.

Milos: if you reproduce this with a new LO version (3.6.4) and a brand new LO profile (see https://wiki.documentfoundation.org/UserProfile), don't hesitate to reopen this tracker.
Comment 6 Milos Sramek 2012-12-30 11:12:55 UTC
Created attachment 72296 [details]
traceback for bug 44998
Comment 7 Milos Sramek 2012-12-30 11:20:28 UTC
Unfortunately, I can confirm the bug also on Version 4.0.0.0.beta2 (Build ID: 4104d660979c57e1160b5135634f732918460a0) (Ubuntu 12.04). The traceback is attached. The old profile was deleted

To repeat, the date should not be highlighted in the moment of right click. If highlighted, it works fine. 
Milos
Comment 8 Julien Nabet 2012-12-30 15:10:04 UTC
I haven't reproduced this with 4.0 sources but perhaps someone will be luckier than me.
Comment 9 Milos Sramek 2013-01-01 18:59:02 UTC
I tested LO 4.0 also on Windows, it crashes there too. Perhaps my explanation was not clear enough to reproduce the situation. Therefore I created a screecast (LO4.0 runing in Win 7 in Virtualbox): http://www.ubuntuone.com/2nR4XtRIZkgla0YpxLNcyi . What one cannot see there are the two clicks on the selected date format prior to the crash. Please note that the menu items are not highlighted when the cursor is positioned above them
m
Comment 10 Julien Nabet 2013-11-23 05:55:10 UTC
Milos: just for information, any better with last LO version 4.1.3?
Comment 11 Milos Sramek 2013-11-25 09:45:52 UTC
Julien: sorry to say that, but the problem is still present. The only difference is that earlier LO has crashed immediately but now it first hangs for 2-3 seconds and crashes only then. The same behavior is with the most recent LO4.2 beta. 

Can I somehow gather more information about that?
Milos
Comment 12 Julien Nabet 2013-12-07 08:06:57 UTC
Milos: 
Could you also tell what's your env?
Could you rename your LO directory profile and give it a new try? (see https://wiki.documentfoundation.org/UserProfile)

If you still reproduce the problem, could you try to retrieve a new backtrace by following this?
https://wiki.documentfoundation.org/QA/BugReport/Debug_Information
Comment 13 Milos Sramek 2013-12-09 10:07:01 UTC
Dear Julien,

LO 4.2.0.0.beta2
ID zostavenia: 1a27be92e320f97c20d581a69ef1c8b99ea9885d
still crashes, but not always:

No crash:
- click on the field by the left button - the field is highlighted (gray, with frame)
- click with the right button on the highlighted field. If the date context menu opens (often the general context menu opens), its items are highlighted, if hovering the cursor over them. Click on and item - the menu closes and the field is changed. No crash

Crash:
- deselect the field by clicking somewhere outside it
- click with the right button on the not highlighted field. The date context menu opens, but its items do not highlight, if hovering the cursor over them. 
- click on an item. In contrary to the above case, the menu does not close. Just the items start to highlight, if hovering over them
- click on an item, LO crashes


What did you mean by 'env'? This?
ubuntu 13.10 64bit, using Unity, LO in Slovak localization (crashes, however, also using English)

I've deleted the .config/libreofficedev/4 profile

I atach the backtrace (/opt/libreofficedev4/program/soffice --backtrace) for both 4.2 and 4.1:

--m
Comment 14 Milos Sramek 2013-12-09 10:09:04 UTC
Created attachment 90500 [details]
backtace for 4.2 beta2

backtrace for  4.2 beta2
Comment 15 Julien Nabet 2013-12-12 20:48:17 UTC
Created attachment 90678 [details]
bt with master sources

On pc Debian x86-64 with master sources updated today, I could reproduce the problem by following steps indicated in the last comments of the reporter.

I attached bt with symbols.
Comment 16 Julien Nabet 2013-12-12 20:49:56 UTC
Thank you Milos for your feedback. I reproduced the exact description you gave at comment 13.

Thorsten: one for you?
Comment 17 Caolán McNamara 2014-10-07 15:21:24 UTC
If you right click like this, a mouse down, context command, mouse up sequence is sent. The mouse up is supposed to be captured by the context menu here. But it doesn't because the mouse down in draw sends an artificial mouse down to the editengine which sets up a MouseCapture window so the context menu doesn't get considered, so the mouse down gets send to sd while the context menu is up.
Comment 18 Caolán McNamara 2014-10-07 15:35:17 UTC
Created attachment 107501 [details]
valgrind log for reference